rnsc/tests/snapshots/error-parser-class_header-only_dir_on_line_recovers.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class
unknown_token ; <- still reported
.end
----- STDERR -----
[E-009] Error: unexpected newline where a class name is required
   ╭─[ test_data/integration/error/parser/class_header/only_dir_on_line_recovers.rns:1:1 ]
   │
 1 │ .class
   │ ───┬──│ 
   │    ╰──── the '.class' directive requires a class name as operand
   │       │ 
   │       ╰─ but nothing was provided
   │ 
   │ Help: Provide a class name after the '.class' directive, e.g.:
   │       .class MyClassName
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-009
───╯
[E-007] Error: unexpected token in class body: 'Identifier(Spanned { value: "unknown_token", span: Span { byte_start: 7, byte_end: 20, line: 1, col_start: 0, col_end: 13 } })'
   ╭─[ test_data/integration/error/parser/class_header/only_dir_on_line_recovers.rns:2:1 ]
   │
 2 │ unknown_token ; <- still reported
   │ ──────┬──────  
   │       ╰──────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-007
───╯
----- HASH -----
not generated
