rnsc/tests/snapshots/error-parser-class_header-trailing_identifier.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MyClass SomethingElse
.super java/lang/Object
----- STDERR -----
[E-010] Error: unexpected trailing tokens after class definition
   ╭─[ test_data/rns_integration/error/parser/class_header/trailing_identifier.rns:1:16 ]
   │
 1 │ .class MyClass SomethingElse
   │               │──────┬──────  
   │               ╰─────────────── expected end of class definition here
   │                      │        
   │                      ╰──────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-010
───╯
----- JAVAP -----
not generated
